tests/ui/missing_mut_call.stderr
Error [E0202]: parameter `x` requires `mut` at the call site
  --> tests/ui/missing_mut_call.lex:7:11
    |
  7 |     touch(x);
    |           ^
 Why: `touch` needs to change this value while it borrows it
 Fix: write `mut x` when calling `touch`
